--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "boxicons": "^2.1.4",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "bourbon": "^7.3.0",
     "tailwindcss": "^3.3.3"
   }
 }
