--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
