--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.43.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "boxicons": "^2.1.4",
@@ -16,11 +17,13 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-widgets": "^5.8.4",
     "reactjs-popup": "^2.0.6",
     "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4"
