--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-date-picker": "^10.5.2",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
@@ -26,6 +30,7 @@
     "react-widgets": "^5.8.4",
     "reactjs-popup": "^2.0.6",
     "reactstrap": "^9.2.0",
+    "recharts": "^2.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
