--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-csv": "^2.2.2",
     "react-date-picker": "^10.5.2",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
